--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,29 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title><%= full_title(yield(:title)) %></title>
-  <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
-  <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
-
-<%= yield %>
-
-</body>
+	<head>
+	  <title><%= full_title(yield(:title)) %></title>
+	  <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
+	  <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
+	  <%= csrf_meta_tags %>
+	</head>
+	<body>
+	<header class="navbar navbar-fixed-top navbar-inverse">
+	      <div class="navbar-inner">
+	        <div class="container">
+	          <%= link_to "sample app", '#', id: "logo" %>
+	          <div id="nav-btn-group" class="btn-group">
+	              <%= link_to "Home",    '#', class: "btn btn-default" %>
+	              <%= link_to "Help",    '#', class: "btn btn-default" %>
+	              <%= link_to "Sign in", '#', class: "btn btn-default" %>
+	            </ul>
+	          </nav>
+	        </div>
+	      </div>
+	    </header>
+	    <div class="container">
+	    	<div class="inner-padding15">
+				<%= yield %>
+			</div>
+		</div>
+	</body>
 </html>
