--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,23 +1,8 @@
 @import "bootstrap";
 
-/* header */
+/* mixins, variables, etc. */
 
-#logo {
-  float: left;
-  margin-right: 10px;
-  font-size: 1.7em;
-  color: #fff;
-  text-transform: uppercase;
-  letter-spacing: -1px;
-  padding-top: 9px;
-  font-weight: bold;
-  line-height: 1;
-}
-
-#logo:hover {
-  color: #ccc;
-  text-decoration: none;
-}
+$grayMediumLight: #eaeaea;
 
 /* universal */
 
@@ -39,25 +24,9 @@ textarea {
 
 .center {
   text-align: center;
-}
-
-.center h1 {
-  margin-bottom: 10px;
-}
-
-div.inner-padding15 {
-	padding: 15px;
-}
-
-img#img_avatar {
-	max-width: 100px;
-	max-height: 100px;
-}
-
-div#nav-btn-group {
-	position: absolute;
-	right: 10%;
-	bottom: 5px;
+  h1 {
+    margin-bottom: 10px;
+  }
 }
 
 /* typography */
@@ -79,10 +48,71 @@ h2 {
   margin-bottom: 30px;
   text-align: center;
   font-weight: normal;
-  color: #999;
+  color: $gray-light;
 }
 
 p {
   font-size: 1.1em;
   line-height: 1.7em;
+}
+
+
+/* header */
+
+#logo {
+  float: left;
+  margin-right: 10px;
+  font-size: 1.7em;
+  color: white;
+  text-transform: uppercase;
+  letter-spacing: -1px;
+  padding-top: 9px;
+  font-weight: bold;
+  line-height: 1;
+  &:hover {
+    color: white;
+    text-decoration: none;
+  }
+}
+
+/* footer */
+
+footer {
+  margin-top: 45px;
+  padding-top: 5px;
+  border-top: 1px solid $grayMediumLight;
+  color: $gray-light;
+  a {
+    color: $gray;
+    &:hover {
+      color: $gray-darker;
+    }
+  }
+  small {
+    float: left;
+  }
+  ul {
+    float: right;
+    list-style: none;
+    li {
+      float: left;
+      margin-left: 10px;
+    }
+  }
+}
+
+/* added by me */
+div.inner-padding15 {
+	padding: 15px;
+}
+
+img#img_avatar {
+	max-width: 100px;
+	max-height: 100px;
+}
+
+div#nav-btn-group {
+	position: absolute;
+	right: 10%;
+	bottom: 5px;
 }
