--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,12 @@
     <%= render 'layouts/header' %>
     <div class="container">
     	<div class="inner-padding15">
+    		<% flash.each do |key, value| %>
+		        <div class="alert alert-<%= key %>"><%= value %></div>
+			<% end %>
 			<%= yield %>
 			<%= render 'layouts/footer' %>
+			<%= debug(params) if Rails.env.development? %>
 		</div>
     </div>
   </body>
