--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,10 +2,30 @@
   <div class="navbar-inner">
     <div class="container">
       <%= link_to "sample app", '#', id: "logo" %>
-      <div id="nav-btn-group" class="btn-group">
-        <%= link_to "Home",    root_path, class: "btn btn-default" %>
-        <%= link_to "Help",    help_path, class: "btn btn-default" %>
-        <%= link_to "Sign in", '#', class: "btn btn-default" %>
+      <div id="navigation-group">
+        <div id="nav-btn-group" class="btn-group">
+          <%= link_to "Home",    root_path, class: "btn btn-default" %>
+          <%= link_to "Help",    help_path, class: "btn btn-default" %>
+          <% if signed_in? %>
+              
+              <%= link_to "Users", '#', class: "btn btn-default" %>
+              <div class="btn-group">
+                <a href="#" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
+                  Account <span class="caret"></span>
+                </a>
+                <ul class="dropdown-menu">
+                  <li><%= link_to "Profile", current_user %></li>
+                  <li><%= link_to "Settings", '#' %></li>
+                  <li class="divider"></li>
+                  <li>
+                    <%= link_to "Sign out", signout_path, method: "delete" %>
+                  </li>
+                </ul>
+              </div>
+          <% else %>
+            <%= link_to "Sign in", signin_path, class: "btn btn-default" %>
+          <% end %>
+        </div>
       </div>
     </div>
   </div>
