--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,21 +1,20 @@
 <header class="navbar navbar-fixed-top navbar-inverse">
   <div class="navbar-inner">
     <div class="container">
-      <%= link_to "sample app", '#', id: "logo" %>
+      <%= link_to "sample app", root_path, id: "logo" %>
       <div id="navigation-group">
         <div id="nav-btn-group" class="btn-group">
           <%= link_to "Home",    root_path, class: "btn btn-default" %>
           <%= link_to "Help",    help_path, class: "btn btn-default" %>
           <% if signed_in? %>
-              
-              <%= link_to "Users", '#', class: "btn btn-default" %>
+              <%= link_to "Users", users_path, class: "btn btn-default" %>
               <div class="btn-group">
                 <a href="#" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
                   Account <span class="caret"></span>
                 </a>
                 <ul class="dropdown-menu">
                   <li><%= link_to "Profile", current_user %></li>
-                  <li><%= link_to "Settings", '#' %></li>
+                  <li><%= link_to "Settings", edit_user_path(current_user) %></li>
                   <li class="divider"></li>
                   <li>
                     <%= link_to "Sign out", signout_path, method: "delete" %>
