--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -4,15 +4,7 @@
 <div class="row">
   <div class="col-xs-6 col-xs-offset-3">
     <%= bootstrap_form_for(@user, inline_errors: false) do |f| %>
-	  <%= render 'shared/error_messages' %>
-      <%= f.text_field :name %>
-
-      <%= f.email_field :email %>
-
-      <%= f.password_field :password %>
-
-      <%= f.password_field :password_confirmation, label: "Confirmation" %>
-
+	  <%= render 'users/fields', f: f %>
       <%= f.submit "Create my account", class: "btn btn-large btn-primary" %>
     <% end %>
   </div>
