--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -156,6 +156,12 @@ input, textarea, select, .uneditable-input {
   @include box_sizing;
 }
 
+textarea#micropost_content {
+  height: 75px;
+  max-width: 100%;
+  max-height: 75px;
+}
+
 input {
   height: auto !important;
 }
@@ -164,7 +170,7 @@ input[value='Create my account'] {
   width: 150px;
 }
 
-input[value='Sign in'] {
+input[value='Sign in'], input[value='Post'] {
   width: 75px;
 }
 
@@ -183,6 +189,49 @@ input[name='commit'] {
 .field_with_errors {
   @extend .form-group;
   // @extend .error;
+}
+
+/* Users index */
+
+.users {
+  list-style: none;
+  margin: 0;
+  li {
+    overflow: auto;
+    padding: 10px 0;
+    border-top: 1px solid $gray-lighter;
+    &:last-child {
+      border-bottom: 1px solid $gray-lighter;
+    }
+  }
+}
+
+/* microposts */
+
+.microposts {
+  list-style: none;
+  margin: 10px 0 0 0;
+
+  li {
+    padding: 10px 0;
+    border-top: 1px solid #e8e8e8;
+  }
+}
+.content {
+  display: block;
+}
+.timestamp {
+  color: $gray-light;
+}
+.gravatar {
+  float: left;
+  margin-right: 10px;
+}
+aside {
+  textarea {
+    height: 100px;
+    margin-bottom: 5px;
+  }
 }
 
 /* added by me */
