--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,3 +1,19 @@
+<% if signed_in? %>
+  <div class="row">
+    <aside class="col-xs-4">
+      <section>
+        <%= render 'shared/user_info' %>
+      </section>
+      <section>
+        <%= render 'shared/micropost_form' %>
+      </section>
+    </aside>
+    <div class="col-xs-8">
+      <h3>Micropost Feed</h3>
+      <%= render 'shared/feed' %>
+    </div>
+  </div>
+<% else %>
 <div class="center jumbotron">
   <h1>Welcome to the Sample App</h1>
 
@@ -11,3 +27,4 @@
 </div>
 
 <%= link_to image_tag("avatar.png", alt: "Alex Stout", id: "img_avatar"), 'http://alexstout.weebly.com/' %>
+<% end %>
