adds javascript char counter to micropost form and adds word wrap functions for long words that break the layout

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -250,6 +250,11 @@ div#navigation-group {
   bottom: 5px;
 }
 
+span#char-counter {
+  color: $gray-light;
+  float: right;
+}
+
 // div#nav-btn-group {
 // 	float: left;
 // }
